--- a/view/frontend/templates/guest-email.phtml
+++ b/view/frontend/templates/guest-email.phtml
@@ -33,15 +33,16 @@ $viewModel = $block->getData('viewModel');
         <fieldset id="customer-email-fieldset" class="fieldset"
         x-data="guestCheckout()" x-on:click.away="isTooltipVisible = false">
             <div class="field required">
-                <label class="label block text-base leading-6 text-gray-900" for="customer-email">
+                <label class="label block text-sm leading-6 text-gray-900" for="customer-email">
                     <span><?= $escaper->escapeHtml(__('Email Address')) ?></span>
                     <span class="text-required ml-1">*</span>
                 </label>
                 <div class="control _with-tooltip mt-1 flex justify-start items-center gap-5">
-                    <div class="w-full">
+                    <div class="w-full max-w-[434px]">
                         <!-- Email input with data validation -->
                         <input x-bind:class="`input-text block w-full rounded-md border-0 py-2.5 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6 ${errorMessage == '' ? 'valid' : 'mage-error'}`"
                         x-model="email" @input="validateEmail" @change="isEmailAvailable"
+                        x-on:input.debounce="validate($event)"
                         type="email" name="username" id="customer-email"
                         x-bind:data-validate="JSON.stringify({ required: true })"
                         placeholder="Enter your email">
@@ -69,39 +70,41 @@ $viewModel = $block->getData('viewModel');
                     </div>
                 </div>
                 <!-- Account creation note -->
-                <div class="note text-base font-semibold mt-2" x-show="showPasswordField"x-transition>
+                <div class="note text-sm mt-2" x-show="showPasswordField" x-transition>
                     <?= $escaper->escapeHtml(
                         __('You can create an account after checkout.')
                     ) ?>
                 </div>
             </div>
             <fieldset class="fieldset hidden-fields" x-show="!showPasswordField" style="">
-                <div class="field">
-                    <label class="label" for="customer-password">
+                <div class="field mt-5">
+                    <label class="label block text-sm leading-6 text-gray-900" for="customer-password">
                         <span><?= $escaper->escapeHtml(__('Password')) ?></span>
                         <span class="text-required ml-1">*</span>
                     </label>
-                    <div class="control">
+                    <div class="control w-full max-w-[434px]">
                         <input class="input-text block w-full rounded-md border-0 py-2.5 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-primary sm:text-sm sm:leading-6" :placeholder="'Password'"
                         type="password" name="password" id="customer-password"
+                        x-on:input.debounce="validate($event)"
                         x-bind:data-validate="JSON.stringify({ required: true })" autocomplete="off">
-                        <span class="note">
+                        <span class="note text-sm mt-2 inline-block">
                             <?= $escaper->escapeHtml(
                                 __('You already have an account with us. Sign in or continue as guest.')
                             ) ?></span>
                     </div>
                     <div class="field-error text-sm text-error mt-2" x-show="errors['password']" x-text="errors['password']"></div>
                 </div>
-                <div class="actions-toolbar mt-5">
+                <div class="actions-toolbar inline-flex items-center gap-6 mt-5">
+                    <input name="captcha_form_id" type="hidden" value="user_login">
                     <input name="context" type="hidden" value="checkout">
                     <div class="primary">
-                        <button type="submit" @click.prevent="triggerGuestLogin('guest-login')"
+                        <button type="submit" :disabled="errorMessage != ''" @click.prevent="triggerGuestLogin('guest-login')"
                         class="action login primary primary-btn">
                             <span><?= $escaper->escapeHtml(__('Login')) ?></span>
                         </button>
                     </div>
                     <div class="secondary">
-                        <a class="action remind" x-bind:href="config.forgotPasswordUrl">
+                        <a class="action remind text-primary text-sm hover:underline" x-bind:href="config.forgotPasswordUrl">
                             <span><?= $escaper->escapeHtml(__('Forgot Your Password?')) ?></span>
                         </a>
                     </div>
@@ -117,13 +120,28 @@ $viewModel = $block->getData('viewModel');
                     isTooltipVisible: false,
                     showPasswordField: true,
                     storeCode: '<?= $escaper->escapeHtmlAttr($viewModel->getCurrentStoreCode()) ?>',
-                    message : 'This is a required field.',
+                    message : 'Required field.',
                     init() {
                         this.getGuestEmail();
                     },
                     validateEmail() {
                         const emailPattern = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
                         this.errorMessage = emailPattern.test(this.email) ? '' : 'Please enter a valid email address (Ex: johndoe@domain.com).';
+                    },
+                    validate(event) {
+                        const element = event.target;
+                        const validation = JSON.parse(element.getAttribute('data-validate') || '{}');
+                        if (validation['required']) {
+                            if (validation['required'] && !element.value.trim()) {
+                                this.errors[element.name] = this.message;
+                            } else if (validation['max_text_length'] && element.value.length > validation['max_text_length']) {
+                                this.errors[element.name] = 'Text is too long';
+                            } else if (validation['min_text_length'] && element.value.length < validation['min_text_length']) {
+                                this.errors[element.name] = 'Text is too short';
+                            } else {
+                                delete this.errors[element.name];
+                            }
+                        }
                     },
                     toggleTooltip() {
                         this.isTooltipVisible = !this.isTooltipVisible;
@@ -139,6 +157,8 @@ $viewModel = $block->getData('viewModel');
                                 if (validation['required'] && !element.value) {
                                     valid = false;
                                     this.errors[element.name] = this.message;
+                                } else {
+                                    delete this.errors[element.name];
                                 }
                             }
                         }
@@ -149,13 +169,25 @@ $viewModel = $block->getData('viewModel');
                         if (valid) this.processGuestLogin(formData);
                     },
                     async processGuestLogin(formData) {
-                        const t = `${BASE_URL}customer/ajax/login`;
-                        fetch(t, { method: "POST", body: JSON.stringify(formData), credentials: "include" })
-                        .then((e) => { e.ok && (window.location.href = e.url); })
-                        .catch((e) => console.error("Fetch error:", e));
-                        console.log(response);
-                        /* if (response.ok) window.location.href = response.url
-                        console.log(response); */
+                        const url = `${BASE_URL}customer/ajax/login`;
+                        try {
+                            const response = await fetch(url, {
+                                method: "POST",
+                                body: JSON.stringify(formData),
+                                headers: {
+                                    "Content-Type": "application/json",
+                                    "X-Requested-With": "XMLHttpRequest",
+                                },
+                                credentials: "include",
+                            });
+                            if (response.ok) {
+                                window.location.href = `${BASE_URL}checkout`
+                            } else {
+                                console.error("Login failed:", response);
+                            }
+                        } catch (error) {
+                            console.error("Fetch error:", error);
+                        }
                     },
                     getGuestEmail () {
                         let e = localStorage.getItem('vira-mage-cache-storage');
@@ -164,6 +196,7 @@ $viewModel = $block->getData('viewModel');
                                 const checkoutData = JSON.parse(e); // Parse the JSON string
                                 if (checkoutData && checkoutData['checkout-data'] && checkoutData['checkout-data']['guestEmail']) {
                                     this.email = checkoutData['checkout-data']['guestEmail'];
+                                    var inter = setInterval(() => { clearInterval(inter); this.isEmailAvailable();}, 1500);
                                 }
                             } catch (error) {
                                 console.error('Error parsing vira-mage-cache-storage:', error);
@@ -188,7 +221,7 @@ $viewModel = $block->getData('viewModel');
                                 body: requestBody
                             }).then(response => response.json())
                             .then(data => {
-                                this.showPasswordField = true; /* change value to false,when you got the idea for login and load the checkout */
+                                this.showPasswordField = data; /* change value to false,when you got the idea for login and load the checkout */
                             }).catch(error => {
                                 console.error('Error fetching email:', error);
                             });
