Order summary total update

--- a/view/frontend/templates/summary.phtml
+++ b/view/frontend/templates/summary.phtml
@@ -108,7 +108,7 @@
                                                 <span x-bind:class="(value.row_total_incl_tax) ? 'price-including-tax' : 'price-excluding-tax'">
                                                     <span class="cart-price">
                                                         <span class="price font-semibold"
-                                                        x-text="getCartItemTotalPrice(value.price_incl_tax || value.price_excl_tax)"></span>
+                                                        x-text="getCartItemTotalPrice(value.row_total)"></span>
                                                     </span>
                                                 </span>
                                             </div>
