--- a/view/frontend/templates/payment.phtml
+++ b/view/frontend/templates/payment.phtml
@@ -262,7 +262,7 @@ if ($paypalSmartButton->getJsInitParams()) {
                                                                                         </div>
                                                                                     </template>
                                                                                     <div class="field choice mb-5 col-span-2" x-show="!guest">
-                                                                                        <input type="checkbox" class="checkbox rounded h-4 w-4 cursor-pointer border-gray-300 text-primary focus:ring-primary"
+                                                                                        <input type="checkbox" name="save_in_address_book" class="checkbox rounded h-4 w-4 cursor-pointer border-gray-300 text-primary focus:ring-primary"
                                                                                         x-bind:checked="(selectedBillingAddressId != 0 || config.customerData.addresses.length == 0) && defBillAdr ? defBillAdr['save_in_address_book'] : false"
                                                                                         x-bind:id="`billsave-in-adr-${payment_method.code}`" />
                                                                                         <label class="label inline-block ml-2 cursor-pointer leading-6 text-gray-900"
@@ -321,6 +321,23 @@ if ($paypalSmartButton->getJsInitParams()) {
                                                         ) ?>
                                                     </div>
                                                 </fieldset>
+                                                <div class="checkout-agreements-block">
+                                                    <template x-if="checkoutAgreements.agreements.length">
+                                                        <div class="checkout-agreements fieldset">
+                                                            <template x-for="agreement in checkoutAgreements.agreements">
+                                                                <div class="checkout-agreement field choice required">
+                                                                    <input type="checkbox" class="required-entry" x-bind:id="`agreement_${payment_method.code}`" x-bind:name="`agreement[${agreement.agreementId}]`" x-bind:value="agreement.agreementId">
+                                                                    <label class="label" x-bind:for="`agreement_${payment_method.code}`">
+                                                                        <button type="button" class="action action-show" x-on:click="showAgreementModal(agreement)">
+                                                                            <span x-text="agreement.checkboxText"></span>
+                                                                            <span class="text-required ml-1">*</span>
+                                                                        </button>
+                                                                    </label>
+                                                                </div>
+                                                            </template>
+                                                        </div>
+                                                    </template>
+                                                </div>
                                                 <div class="actions-toolbar">
                                                     <div class="primary flex justify-end items-center gap-5">
                                                         <button :disabled="loading || isBillingFormOpen"
@@ -415,4 +432,55 @@ if ($paypalSmartButton->getJsInitParams()) {
             </div>
         </div>
     </div>
+    <template x-if="checkoutAgreements.agreements.length">
+        <!-- Agreement Terms Modal -->
+        <div class="modals-wrapper">
+            <div x-show="isAgreementModalOpen"
+                x-transition:enter="transition ease-out duration-300"
+                x-transition:enter-start="opacity-0"
+                x-transition:enter-end="opacity-100"
+                x-transition:leave="transition ease-in duration-200"
+                x-transition:leave-start="opacity-100"
+                x-transition:leave-end="opacity-0"
+                class="fixed inset-0 bg-black bg-opacity-50 z-[500]"
+                @click="isAgreementModalOpen = false"
+                style="">
+            </div>
+            <div x-show="isAgreementModalOpen"
+                x-transition:enter="transition ease-out duration-300 transform"
+                x-transition:enter-start="opacity-0 scale-90"
+                x-transition:enter-end="opacity-100 scale-100"
+                x-transition:leave="transition ease-in duration-200 transform"
+                x-transition:leave-start="opacity-100 scale-100"
+                x-transition:leave-end="opacity-0 scale-90"
+                class="fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 bg-white rounded-xl shadow-lg z-[600] max-w-[90%] md:max-w-sm lg:max-w-[705px] w-full">
+                <!-- Scrollable Content -->
+                <div class="relative max-h-[80vh] overflow-y-auto p-8 md:p-10 md:py-12 ">
+                    <!-- Close Button -->
+                    <div class="absolute top-2 right-2 z-10">
+                        <button @click="isAgreementModalOpen = false"
+                            class="p-2 rounded-md hover:bg-gray-100" type="button">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" 
+                                viewBox="0 0 24 24" class="text-asseenontv-tooltip" width="20" height="20" role="img">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                                <title><?= $escaper->escapeHtml(__('x')) ?></title>
+                            </svg>
+                        </button>
+                    </div>
+                    <div id="modal-content-agreement" class="modal-content" data-role="content">
+                        <div class="text-xl text-gray-900 pb-5 font-medium flex justify-start items-start gap-5">
+                            <?= $escaper->escapeHtml(__('Terms and Conditions')) ?>
+                        </div>
+                        <div class="agreement-content" x-text="selectedAgreement ? selectedAgreement.content : ''"></div>
+                    </div>
+                    <div class="modal-footer mt-10 flex justify-end items-center gap-5">
+                        <button class="action secondary action-hide-popup text-sm"
+                        x-on:click="isAgreementModalOpen=false">
+                            <span><?= $escaper->escapeHtml(__('Close')) ?></span>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </template>
 </div>
