--- a/view/frontend/templates/js/script.phtml
+++ b/view/frontend/templates/js/script.phtml
@@ -876,7 +876,7 @@ $addressFormFields['region_id']['validation']['required-entry'] = true;
             /* Place order for paypal */
             async continueToPayPal() {
                 const formData = {};
-                if (Object.keys(this.checkoutAgreements.agreements).length > 0) {
+                if (this.checkoutAgreements.isEnabled && Object.keys(this.checkoutAgreements.agreements).length > 0) {
                     if (!document.getElementById(`agreement_${this.selectedPaymentMethod}`).checked) {
                         this.loading = false;
                         this.displayWarning('Please accept the terms and conditions to continue.', '.payment-method', 'payment-method-warning');
@@ -886,7 +886,7 @@ $addressFormFields['region_id']['validation']['required-entry'] = true;
                 formData["billingAddress"] = this.formatAddress(this.defBillAdr);
                 formData["paymentMethod"] = {};
                 formData["paymentMethod"]["method"] = this.selectedPaymentMethod;
-                if (Object.keys(this.checkoutAgreements.agreements).length > 0) {
+                if (this.checkoutAgreements.isEnabled && Object.keys(this.checkoutAgreements.agreements).length > 0) {
                     formData["paymentMethod"]["extension_attributes"] = {};
                     formData["paymentMethod"]["extension_attributes"]["agreement_ids"] = [document.getElementById(`agreement_${this.selectedPaymentMethod}`).value];
                 }
@@ -919,7 +919,7 @@ $addressFormFields['region_id']['validation']['required-entry'] = true;
             /* Default Place Order */
             async placeOrder() {
                 this.loading = true;
-                if (Object.keys(this.checkoutAgreements.agreements).length > 0) {
+                if (this.checkoutAgreements.isEnabled && Object.keys(this.checkoutAgreements.agreements).length > 0) {
                     if (!document.getElementById(`agreement_${this.selectedPaymentMethod}`).checked) {
                         this.loading = false;
                         this.displayWarning('Please accept the terms and conditions to continue.', '.payment-method', 'payment-method-warning');
@@ -941,7 +941,7 @@ $addressFormFields['region_id']['validation']['required-entry'] = true;
                 formData["paymentMethod"]["additional_data"] = null;
                 formData["paymentMethod"]["method"] = this.selectedPaymentMethod;
                 formData["paymentMethod"]["po_number"] = null;
-                if (Object.keys(this.checkoutAgreements.agreements).length > 0) {
+                if (this.checkoutAgreements.isEnabled && Object.keys(this.checkoutAgreements.agreements).length > 0) {
                     formData["paymentMethod"]["extension_attributes"] = {};
                     formData["paymentMethod"]["extension_attributes"]["agreement_ids"] = [document.getElementById(`agreement_${this.selectedPaymentMethod}`).value];
                 }
