--- a/view/frontend/templates/summary.phtml
+++ b/view/frontend/templates/summary.phtml
@@ -26,7 +26,7 @@
  */
 ?>
 <div class="opc-sidebar opc-summary-wrapper " x-data="summary()">
-    <div id="opc-sidebar" class="p-5 bg-neutral-100 rounded mb-5">
+    <div id="opc-sidebar" class="p-5 bg-neutral-100 rounded-sm mb-5">
         <div class="opc-block-summary">
             <span class="title block mb-3 font-semibold"><?= $escaper->escapeHtml(__('Order Summary'))?></span>
         </div>
